apps/frontend/nginx-leaflet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-leaflet
  namespace: jku-cloud-computing
  name: nginx-leaflet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-leaflet
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-leaflet
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: nginx-leaflet
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: ghcr.io/cndreiter/nginx-leaflet:latest
        imagePullPolicy: Always
        name: nginx-leaflet
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
